0026492: OpenGl_FrameBuffer does not releases itself correctly

Logic related to myIsOwnBuffer flag in OpenGl_FrameBuffer was corrected.