src/OpenGl/OpenGl_FrameBuffer.cxx
@@ -64,6 +64,8 @@ Standard_Boolean OpenGl_FrameBuffer::Init (const Handle(OpenGl_Context)& theGlCo
   // clean up previous state
   Release (theGlContext.operator->());
 
+  myIsOwnBuffer = true;
+
   // setup viewport sizes as is
   myVPSizeX = theViewportSizeX;
   myVPSizeY = theViewportSizeY;
@@ -162,6 +164,8 @@ Standard_Boolean OpenGl_FrameBuffer::InitWithRB (const Handle(OpenGl_Context)& t
 
   // clean up previous state
   Release (theGlCtx.operator->());
+
+  myIsOwnBuffer = true;
 
   // setup viewport sizes as is
   myVPSizeX = theViewportSizeX;
